--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
 <div class="header_nav_content1">
   <div class="header_nav_content1-contact">
 <ul class="header_nav_ul_contact">
-  <li class="header_nav_ul_contact-li phonenumber"><a href="#" class="header__navbar-icon-link">
+  <li class="header_nav_ul_contact-li phonenumber"><a href="main.html" class="header__navbar-icon-link">
     <i class="fas fa-phone"></i>
     <span>0330 123 4567</span>
   </a>
@@ -40,9 +40,10 @@
           <span>WHAT'S ON</span>
           <div class="header_nav_content2-navs_underline"></div>
         </li>
-        <li>
+        <li onclick="directShortcodesPage()">
           <span>SHORTCODES</span>
           <div class="header_nav_content2-navs_underline"></div>
+
         </li>
         <li class="news">
           <span >NEWS</span>
