--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
   function showDiv() {
       document.getElementById('myNavbarShow').style.display = "block";
     document.getElementById('header_nav_content3').style.display = "none";
-    header_nav_content3
   }
+  // function directShortcodesPage(){
+  //   $(".header").load("header.html");
+  //   $(".main").load("shortcodes.html");
+  //   $(".footer").load("footer.html");
+  // }
 </script>
