--- a/header.html
+++ b/header.html
@@ -33,7 +33,7 @@
     <div class="header_nav_content2-navs-1" id="myNavbarShow">
       <ul>
         <li>
-          <span>HOME</span>
+          <span><a href="index.html">HOME</a></span>
           <div class="header_nav_content2-navs_underline"></div>
         </li>
         <li>
@@ -41,19 +41,20 @@
           <div class="header_nav_content2-navs_underline"></div>
         </li>
         <li onclick="directShortcodesPage()">
-          <span>SHORTCODES</span>
+          <span><a href="main.html">SHORTCODES</a></span>
           <div class="header_nav_content2-navs_underline"></div>
 
         </li>
         <li class="news">
-          <span >NEWS</span>
+          <span><a href="main.html">NEWS</a></span>
           <div class="header_nav_content2-navs_underline"></div>
           <div class="header_nav_content2-navs_underdialog">
             <span>New Single</span>
           </div>
         </li>
         <li>
-          <span>CONTACT</span>
+          <span><a href="contact.html">CONTACT</a></span>
+
           <div class="header_nav_content2-navs_underline"></div>
         </li>
         <br>
