--- a/contact_content.html
+++ b/contact_content.html
@@ -42,7 +42,7 @@
 <i class="material-icons">place</i>
 </span>
                 </div>
-                <div class="col" style="width: 300px; height: auto; position: absolute; right: 64px">
+                <div class="col col_responsive" style="width: 300px; height: auto; position: absolute; right: 64px">
                     <h4 class="no-underline">Address</h4>
                     <p>342 Sloane St, London, W1D 3NE</p>
                 </div>
@@ -53,7 +53,7 @@
 <i class="material-icons">email</i>
 </span>
                 </div>
-                <div class="col" style="width: 300px; height: auto; position: absolute; right: 64px">
+                <div class="col col_responsive" style="width: 300px; height: auto; position: absolute; right: 64px">
                     <h4 class="no-underline">Email</h4>
                     <p>info@moviestar.co.uk</p>
                 </div>
@@ -64,7 +64,7 @@
 <i class="material-icons">phone in talk</i>
 </span>
                 </div>
-                <div class="col" style="width: 300px; height: auto; position: absolute; right: 64px">
+                <div class="col col_responsive" style="width: 300px; height: auto; position: absolute; right: 64px">
                     <h4 class="no-underline">Telephone</h4>
                     <p>+44 0330 123 4567</p>
                 </div>
