--- a/base/content.html
+++ b/base/content.html
@@ -1,31 +1,31 @@
 <div class="main">
   <div class="main_left-content">
     <div class="main_left-content_content1">
-      <img src="https://www.klevermedia.co.uk/html_templates/movie_star_html/images/post-1.png" class="news-single-img" alt="">
+      <img src="img/post-1.png" class="news-single-img" alt="">
       <div class="main_left-content_content1-text">
         <span class="main_left-content_content1_text_title1">
           NEW RELEASES, WHAT'S HOT
         </span><br>
         <h2 class="main_left-content_content1-text-title2">15 Tips To Increase Your Adwords Profits</h2>
         <div id="text_manager">
-        <p class="main_left-content_content1_text_title1_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-          sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-          Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-          ut aliquip ex ea commodo consequat.</p>
-        <p class="main_left-content_content1_text_title1_text">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat,
-        vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio
-        dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait
-        nulla facilisi. Nam liber tempor cum soluta nobis eleifend
-        option congue nihil imperdiet doming id quod mazim placerat facer possim assum.
-        </p>
-        <blockquote class="main_left-content_content1_text_title1_text">Humanitatis per seacula quarta decima et quinta decima eodem modo typi,
-          qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</blockquote>
-        <br><p class="main_left-content_content1_text_title1_text">Vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto
+          <p class="main_left-content_content1_text_title1_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+            sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+            Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+            ut aliquip ex ea commodo consequat.</p>
+          <p class="main_left-content_content1_text_title1_text">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat,
+            vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio
+            dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait
+            nulla facilisi. Nam liber tempor cum soluta nobis eleifend
+            option congue nihil imperdiet doming id quod mazim placerat facer possim assum.
+          </p>
+          <blockquote class="main_left-content_content1_text_title1_text">Humanitatis per seacula quarta decima et quinta decima eodem modo typi,
+            qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</blockquote>
+          <br><p class="main_left-content_content1_text_title1_text">Vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto
           odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait
           nulla facilisi. Nam liber tempor cum soluta nobis eleifend
           option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
-        <p class="main_left-content_content1_text_title1_text">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
-          lobortis nisl ut aliquip ex ea commodo consequat.</p>
+          <p class="main_left-content_content1_text_title1_text">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
+            lobortis nisl ut aliquip ex ea commodo consequat.</p>
         </div>
       </div>
     </div>
@@ -60,18 +60,17 @@
       <div class="news-comments">
         <h3>2 Comments</h3>
         <div class="single-comment">
-          <img src="https://www.klevermedia.co.uk/html_templates/movie_star_html/images/avatar.png" class="Luke Barrett">
+          <img src="img/avatar.png" class="Luke Barrett">
           <span class="date">February 2, at 2:34pm</span>
           <h4 class="no-underline">Luke Barrett</h4>
           <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima.</p>
         </div>
         <div class="single-comment">
-          <img src="https://www.klevermedia.co.uk/html_templates/movie_star_html/images/avatar.png" class="Luke Barrett">
+          <img src="img/avatar.png" class="Luke Barrett">
           <span class="date">February 2, at 2:34pm</span>
           <h4 class="no-underline">Luke Barrett</h4>
           <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima.</p>
         </div>
-
       </div>
     </div>
     <div class="news-comment-form">
