--- a/base/header.html
+++ b/base/header.html
@@ -1,23 +1,23 @@
-<div class="header_nav">
-<div class="header_nav_content1">
-  <div class="header_nav_content1-contact">
-<ul class="header_nav_ul_contact">
-  <li class="header_nav_ul_contact-li phonenumber"><a href="main.html" class="header__navbar-icon-link">
-    <i class="fas fa-phone"></i>
-    <span>0330 123 4567</span>
-  </a>
-   </li>
-  <li class="header_nav_ul_contact-li line"></li>
+<div class="header_nav" style="background-image: url('img/hero-2.jpg')">
+  <div class="header_nav_content1">
+    <div class="header_nav_content1-contact">
+      <ul class="header_nav_ul_contact">
+        <li class="header_nav_ul_contact-li phonenumber"><a href="#" class="header__navbar-icon-link">
+          <i class="fas fa-phone"></i>
+          <span>0330 123 4567</span>
+        </a>
+        </li>
+        <li class="header_nav_ul_contact-li line"></li>
 
-  <li class="header_nav_ul_contact-li search"> <a href="#" class="header__navbar-icon-link">
-    <i class="fas fa-search"></i>
-  </a></li>
-</ul>
-  </div>
-  <div class="header_nav_content1-search">
+        <li class="header_nav_ul_contact-li search"> <a href="#" class="header__navbar-icon-link">
+          <i class="fas fa-search"></i>
+        </a></li>
+      </ul>
+    </div>
+    <div class="header_nav_content1-search">
 
+    </div>
   </div>
-</div>
   <div class="header_nav_content2" id="myNav">
     <div class="header_nav_content2-logo">
       <img src="https://www.klevermedia.co.uk/html_templates/movie_star_html/images/logo.svg">
@@ -33,28 +33,26 @@
     <div class="header_nav_content2-navs-1" id="myNavbarShow">
       <ul>
         <li>
-          <span><a href="index.html">HOME</a></span>
+          <span>HOME</span>
           <div class="header_nav_content2-navs_underline"></div>
         </li>
         <li>
           <span>WHAT'S ON</span>
           <div class="header_nav_content2-navs_underline"></div>
         </li>
-        <li onclick="directShortcodesPage()">
-          <span><a href="main.html">SHORTCODES</a></span>
+        <li>
+          <span>SHORTCODES</span>
           <div class="header_nav_content2-navs_underline"></div>
-
         </li>
         <li class="news">
-          <span><a href="main.html">NEWS</a></span>
+          <span >NEWS</span>
           <div class="header_nav_content2-navs_underline"></div>
           <div class="header_nav_content2-navs_underdialog">
             <span>New Single</span>
           </div>
         </li>
         <li>
-          <span><a href="contact.html">CONTACT</a></span>
-
+          <span>CONTACT</span>
           <div class="header_nav_content2-navs_underline"></div>
         </li>
         <br>
@@ -90,8 +88,8 @@
     </div>
 
   </div>
-<div class="header_nav_content3" id="header_nav_content3">
-<span class="header_nav_content3-text1">The Very Latest</span><br>
-  <span class="header_nav_content3-text2">Cinama News</span>
-</div>
+  <div class="header_nav_content3" id="header_nav_content3">
+    <span class="header_nav_content3-text1">The Very Latest</span><br>
+    <span class="header_nav_content3-text2">Cinama News</span>
+  </div>
 </div>
