--- a/main.html
+++ b/main.html
@@ -43,9 +43,9 @@
 </div>
 <script>
   $(function () {
-    $(".header").load("header.html");
-    $(".main").load("shortcodes.html");
-    $(".footer").load("footer.html");
+    $(".header").load("base/header.html");
+    $(".main").load("base/shortcodes.html");
+    $(".footer").load("base/footer.html");
   });
   function showDiv() {
     document.getElementById('myNavbarShow').style.display = "block";
