--- a/base/shortcodes.html
+++ b/base/shortcodes.html
@@ -161,19 +161,19 @@
         <hr class="space-40">
         <div class="images_album" style="width: 100%; height: 370px; display: flex; ">
             <div class="image_album" style="width: 30%; height: 370px;margin: 16px">
-                <img src='https://www.klevermedia.co.uk/html_templates/movie_star_html/images/news-1.png'><br><br>
+                <img src='img/news-1.png'><br><br>
                 <span class="date_album">8 March, 2017</span>
                 <h4>Lorem ipsum delor sit amet</h4>
                 <p>Classified advertising is a form of advertising that is particularly common in newspapers and other periodicals.</p>
             </div>
             <div class="image_album" style="width: 30%; height: 370px;margin: 16px">
-                <img src='https://www.klevermedia.co.uk/html_templates/movie_star_html/images/news-1.png'><br><br>
+                <img src='img/news-1.png'><br><br>
                 <span class="date_album">8 March, 2017</span>
                 <h4>Lorem ipsum delor sit amet</h4>
                 <p>Classified advertising is a form of advertising that is particularly common in newspapers and other periodicals.</p>
             </div>
             <div class="image_album" style="width: 30%; height: 370px; margin: 16px">
-                <img src='https://www.klevermedia.co.uk/html_templates/movie_star_html/images/news-1.png'><br><br>
+                <img src='img/news-1.png'><br><br>
                 <span class="date_album">8 March, 2017</span>
                 <h4>Lorem ipsum delor sit amet</h4>
                 <p>Classified advertising is a form of advertising that is particularly common in newspapers and other periodicals.</p>
