--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>CRUD Demo</title>
-<!--  <meta charset="utf-8">-->
+  <!--  <meta charset="utf-8">-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,100;1,300&display=swap"
         rel="stylesheet">
@@ -26,34 +26,40 @@
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/content_right.css">
-<!--  <link rel="stylesheet" href="css/header.css">-->
+  <link rel="stylesheet" href="css/header.css">
 </head>
 
 <body data-new-gr-c-s-check-loaded="14.984.0" data-gr-ext-installed="">
 <div class="header">
-
 </div>
-
 <div class="main">
-
 </div>
-
 <div class="footer">
-
 </div>
 <script>
   $(function () {
-    $(".header").load("header.html");
-    $(".main").load("content.html");
-    $(".footer").load("footer.html");
+    $(".header").load("base/header.html");
+    $(".main").load("base/content.html");
+    $(".footer").load("base/footer.html");
   });
-  function showDiv() {
-      document.getElementById('myNavbarShow').style.display = "block";
-    document.getElementById('header_nav_content3').style.display = "none";
+  window.onscroll = function() {myFunction()};
+
+  // Get the navbar
+  var navbar = document.getElementById("navbar");
+
+  // Get the offset position of the navbar
+  var sticky = navbar.offsetTop;
+  function myFunction() {
+    if (window.pageYOffset >= sticky) {
+      navbar.classList.add("sticky")
+    } else {
+      navbar.classList.remove("sticky");
+    }
   }
-  // function directShortcodesPage(){
-  //   $(".header").load("header.html");
-  //   $(".main").load("shortcodes.html");
-  //   $(".footer").load("footer.html");
-  // }
+
+  function showDiv() {
+    document.getElementById('myNavbarShow').style.display = "block";
+    document.getElementById('header_nav_content3').style.display = "none";
+    header_nav_content3
+  }
 </script>
