--- a/base/header.html
+++ b/base/header.html
@@ -9,7 +9,7 @@
         </li>
         <li class="header_nav_ul_contact-li line"></li>
 
-        <li class="header_nav_ul_contact-li search"> <a href="#" class="header__navbar-icon-link">
+        <li class="header_nav_ul_contact-li search"> <a href="https://huylvph08000.github.io/contact.html" class="header__navbar-icon-link">
           <i class="fas fa-search"></i>
         </a></li>
       </ul>
@@ -52,7 +52,7 @@
           </div>
         </li>
         <li>
-          <span>CONTACT</span>
+          <span><a href="https://huylvph08000.github.io/contact.html">CONTACT</a></span>
           <div class="header_nav_content2-navs_underline"></div>
         </li>
         <br>
@@ -61,7 +61,7 @@
     <div class="header_nav_content2-navs">
       <ul>
         <li>
-          <span>HOME</span>
+          <span><a href="https://huylvph08000.github.io/" style="text-decoration: none; color: white">HOME</a></span>
           <div class="header_nav_content2-navs_underline"></div>
         </li>
         <li>
@@ -69,18 +69,18 @@
           <div class="header_nav_content2-navs_underline"></div>
         </li>
         <li>
-          <span>SHORTCODES</span>
+          <span><a style="text-decoration: none; color: white">SHORTCODES</a></span>
           <div class="header_nav_content2-navs_underline"></div>
         </li>
         <li class="news">
-          <span >NEWS</span>
+          <span ><a href="https://huylvph08000.github.io/main.html" style="text-decoration: none; color: white">NEWS</a></span>
           <div class="header_nav_content2-navs_underline"></div>
           <div class="header_nav_content2-navs_underdialog">
-            <span>New Single</span>
+            <span><a href="https://huylvph08000.github.io/main.html" style="text-decoration: none; color: white">New Single</a></span>
           </div>
         </li>
         <li>
-          <span>CONTACT</span>
+          <span><a style="text-decoration: none; color: white" href="https://huylvph08000.github.io/contact.html">CONTACT</a></span>
           <div class="header_nav_content2-navs_underline"></div>
         </li>
         <br>
