--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>CRUD Demo</title>
+  <title>Movie star</title>
   <!--  <meta charset="utf-8">-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,100;1,300&display=swap"
